# SPFormat

./: .gitmodules  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs  index.html  test.sp  tree-sitter.wasm
.github/workflows/: main.yml  release.yml
assets/: index.4dd0e837.js
assets/css/: index-50cf5901.css  index-bd3c9313.css
assets/js/: index-04d19701.js  index-07c95aef.js  index-126698aa.js  index-1e28398e.js  index-209d668c.js  index-2e470567.js  index-3709f050.js  index-404e0900.js  index-981d59c9.js  index-a64bfc16.js  index-c3da8ad3.js  index-cbd0bc5e.js  index-d95f6fa8.js  index-dc497563.js  index-df65795b.js  index-f8fffa63.js
assets/wasm/: sp_format_bg-1076a809.wasm  sp_format_bg-18579f18.wasm  sp_format_bg-27fade44.wasm  sp_format_bg-2b23127d.wasm  sp_format_bg-2ff68648.wasm  sp_format_bg-3bbe963f.wasm  sp_format_bg-420baafb.wasm  sp_format_bg-46768322.wasm  sp_format_bg-53fa7f74.wasm  sp_format_bg-77e66c07.wasm  sp_format_bg-8afd97a8.wasm  sp_format_bg-8ef1965e.wasm  sp_format_bg-ad774880.wasm  sp_format_bg-ba211766.wasm  sp_format_bg-bc767fff.wasm  sp_format_bg-fb466b15.wasm
bins/: tree-sitter-sourcepawn.wasm
playground/: .gitignore  index.html  package-lock.json  package.json  sp_format_bg.wasm  tailwind.config.js  tsconfig.json  vite.config.ts
playground/src/: App.css  App.tsx  interfaces.ts  text.ts  utils.ts
playground/src/components/: FormatButton.tsx  Header.tsx  SettingsPanel.tsx  Settingspanel.tsx  header.tsx  settingspanel.tsx
src/: formatter.rs  language.rs  lib.rs  main.rs  parser.rs  settings.rs  writers.rs
src/writers/: alias.rs  assertions.rs  enum_structs.rs  enums.rs  expressions.rs  functags.rs  functions.rs  hardcoded_symbols.rs  methodmaps.rs  old_variables.rs  preproc.rs  source_file.rs  statements.rs  structs.rs  typedefs.rs  variables.rs
tree-sitter-sourcepawn/: parser.exp  parser.lib
tree-sitter-sourcepawn/bindings/rust/: build.rs
