[package]
name = "sp_format"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
js-sys = "0.3.57"
tree-sitter = { version = "*", package = "tree-sitter-facade" }
wasm-bindgen = { version = "=0.2.80", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.57"
web-tree-sitter-sys = "*"

[build-dependencies]
cc = "1.0"
wasm-bindgen-test = "0.3.13"
