[package]
name = "sp_format"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[[bin]]
name = "sp_format"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
js-sys = "0.3.57"
tree-sitter = { version = "0.9.0", package = "tree-sitter-facade" }
wasm-bindgen = { version = "=0.2.81", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.57"
web-tree-sitter-sys = "1.3"
clap = { version = "3.2.15", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter-sourcepawn = "0.3.0"

[build-dependencies]
cc = "1.0"
wasm-bindgen-test = "0.3.13"
