[package]
name = "sp_format"
version = "0.1.13"
description = "sourcepawn grammar for the tree-sitter parsing library"
keywords = ["tree-sitter", "formatter", "sourcepawn"]
categories = ["development-tools"]
repository = "https://github.com/Sarrus1/SPFormat"
edition = "2021"
license = "MIT"

include = ["src/*", "LICENSE.md", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "sp_format"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
js-sys = "0.3.57"
serde = { version = "1.0.140", features = ["derive"] }
tree-sitter = { version = "0.9.0", package = "tree-sitter-facade" }
wasm-bindgen = { version = "=0.2.81", features = [
    "strict-macro",
    "serde-serialize",
] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.57"
web-tree-sitter-sys = "1.3"
clap = { version = "3.2.15", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter-sourcepawn = { git = "https://github.com/Sarrus1/tree-sitter-sourcepawn", version="0.5.1" }

[build-dependencies]
cc = "1.0"
wasm-bindgen-test = "0.3.13"
